<?xml version="1.0" encoding="utf-8"?>

<!-- Copyright (C) 2011 Hypermatix Limited

     This file can not be used in any way, distributed, or 
     modified, without the express written permission of Hypermatix Ltd.
-->

<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  android:orientation="vertical"
  android:background="#ff000000">
  
  <LinearLayout 
  		android:layout_width="fill_parent"
  		android:layout_height="0dip"
  		android:layout_weight="1.0"
  		android:orientation="vertical">

	<EditText android:id="@+id/name_edit"               
		android:layout_width="fill_parent"                
		android:layout_height="wrap_content"
		android:inputType="text"
		android:hint="@string/slideshow_name"/>
	
	<TextView android:id="@+id/item"               
		android:layout_width="fill_parent"                
		android:layout_height="wrap_content"
		android:layout_marginLeft="2dip"
		android:textSize="18dip"
		android:text="@string/slideshow_items"/>
		
	<ListView android:id="@+id/item_list"               
		android:layout_width="fill_parent"                
		android:layout_height="fill_parent"/>
		
		<TextView android:id="@+id/count_view"               
		android:layout_width="fill_parent"                
		android:layout_height="wrap_content"/>
		
	</LinearLayout>
		
	<LinearLayout 
		android:id="@+id/buttonBar"
  		android:layout_height="50dip"
  		android:layout_width="fill_parent"
  		android:layout_gravity="bottom"
  		android:orientation="horizontal"
  		android:layout_marginTop="5dip">
		
	<Button android:id="@+id/add_slideshow_item"
		android:layout_width="fill_parent"                
		android:layout_height="fill_parent"    
		android:text="@string/edit_content"
		android:textColor="#ffffffff"
		style="@style/Widget.ImageButton"
	/>
		
		<!-- 
	<Button android:id="@+id/delete_slideshow"
		android:layout_width="fill_parent"                
		android:layout_height="fill_parent"    
		android:text="@string/delete_slideshow"
	/>
	
	<Button android:id="@+id/playlist_slideshow"
		android:layout_width="fill_parent"                
		android:layout_height="fill_parent"    
		android:text="@string/playlist_slideshow"
	/>
		
	<Button android:id="@+id/play_slideshow"
		android:layout_width="fill_parent"                
		android:layout_height="fill_parent"    
		android:text="@string/play_slideshow"
	/>
		
	<Button android:id="@+id/save_slideshow"
		android:layout_width="fill_parent"                
		android:layout_height="fill_parent"    
		android:text="@string/save_slideshow"
	/>
	
	 -->

	</LinearLayout>
	
 </LinearLayout>
